# GMU-CS425

./: .gitignore  CMakeLists.txt  README.md  xmake.lua
cmake/: CMakeLists.txt
data/subdir/: hello.txt
demo/: callbacks.cpp  callbacks_with_parameters.cpp  chrono_sleep_for.cpp  class_method_inheritance.cpp  constructor_reference.cpp  disco_demo.cpp  entity_get.cpp  friend.cpp  helloworld.cpp  lambda_print.cpp  lua_globals.cpp  lua_parameters.cpp  map_vector_inner_class.cpp  paths.cpp  template_add.cpp  templates.cpp  templates.h  unique_ptr.cpp
disco/: ballroom.cpp  ballroom.h  dancer.h  types.h
docs/: 64 or 32-bit entity IDs.txt  callbacks.md  entity_struct_in_an_unordered_map.txt
globals/: globals.cpp  globals.h  globals_main.cpp
pimpl/: dresser.h  house.cpp  house.h  kitchen.h  main.cpp  table.h
